project/manifest/flask-app_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  # namespace: todo-app
  labels:
    app: flask-app
spec:
  replicas: 1
  selector: #matches all labels app: xxx to create connection (i.e. selectors match with labels)
    matchLabels:
      app: flask-app
  # config for a pod
  template:
    metadata:
      labels:
        app: flask-app
    spec: 
      containers:
      - name: flask-app
        image: xzarem/flask-app@sha256:imageTag
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc
  # namespace: todo-app
spec:
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 5000
