project/manifest/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  labels:
    app: nats
spec:
  replicas: 1
  selector: #matches all labels app: xxx to create connection (i.e. selectors match with labels)
    matchLabels:
      app: nats
  # config for a pod
  template:
    metadata:
      labels:
        app: nats
    spec: 
      containers:
      - name: nats
        image: nats:latest
        ports:
        - containerPort: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: nats-svc
spec:
  selector:
    app: nats
  ports:
  - protocol: TCP
    port: 4222
    targetPort: 4222
