project/manifest/react-app_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  # namespace: todo-app
  labels:
    app: frontend-app
spec:
  replicas: 1
  selector: #matches all labels app: xxx to create connection (i.e. selectors match with labels)
    matchLabels:
      app: frontend-app
  # config for a pod
  template:
    metadata:
      labels:
        app: frontend-app
    spec: 
      containers:
      - name: frontend-app
        image: xzarem/frontend-app@sha256:imageTag
        ports:
        - containerPort: 3000
          
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-svc
spec:
  selector:
    app: frontend-app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
